Added DTOs for Models | Added Stream Impl
